--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Tweaklo</a>
+    <%= link_to "Tweaklo", root_path, class: "navbar-brand" %>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -18,6 +18,8 @@
       <li><%= link_to "About Us", about_path %></li>
       <% if user_signed_in? %>
         <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Sign In", new_user_session_path %></li>
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
