--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,13 +14,33 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to "Home", root_path %></li>
-      <li><%= link_to "About Us", about_path %></li>
+      <li>
+        <%= link_to root_path do %>
+          <span class="glyphicon glyphicon-home"></span> Home
+        <% end %>
+      </li>
+      <li>
+        <%= link_to about_path do %>
+          <span class="glyphicon glyphicon-question-sign"></span> About Us
+        <% end %>
+      </li>
       <% if user_signed_in? %>
-        <li><%= link_to "Account Settings", edit_user_registration_path %></li>
-        <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
+        <li>
+          <%= link_to edit_user_registration_path do %>
+            <span class="glyphicon glyphicon-cog"></span> Account Settings
+          <% end %>
+        </li>
+        <li>
+        <%= link_to destroy_user_session_path, method: :delete do %>
+          <span class="glyphicon glyphicon-log-out"></span> Log Out
+        <% end %>
+        </li>
       <% else %>
-        <li><%= link_to "Sign In", new_user_session_path %></li>
+        <li>
+          <%= link_to new_user_session_path do %>
+            <span class="glyphicon glyphicon-log-in"></span> Sign In
+          <% end %>
+        </li>
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
