--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,11 +1,9 @@
+<%= render 'pages/home' unless user_signed_in? %>
+
 <div class="jumbotron center">
 	<h1>Welcome to Tweaklo!</h1>
-	<% if user_signed_in? %>
-		#Do Something
-	<% else %>
 		<p>
 			<%= link_to "Login", new_user_session_path, class: "btn btn-default btn-lg" %>
 			<%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
 		</p>
-	<% end %>
 </div>
